--- a/templates/tpl_add.html
+++ b/templates/tpl_add.html
@@ -4,15 +4,10 @@
 <span>&nbsp;<b>{{ application.title }}</b></span>
 {%- endblock -%}
 
-{%- block menu -%}
-{%- for tv in application.menu -%}
-<li><a href="/list/{{appid}}/{{tv.tableid}}/{{tv.viewid}}">{{application.tables[tv.tableid].views[tv.viewid].title}}</a>
-</li>
-{%- endfor -%}
-{%- endblock -%}
+{%- block menu -%}{% include "tpl_menu.html" %}{%- endblock -%}
 
 {%- block navigation -%}
-<span style="float: left; margin-left: 1em;"><a href="/list/{{appid}}/{{tableid}}/{{viewid}}"><button><- retour
+<span style="float: left; margin-left: 1em;"><a href="{{back}}"><button><- retour
         <b>{{view.title}}</b> </button></a></span>
 {%- endblock -%}
 
