--- a/templates/tpl_base.html
+++ b/templates/tpl_base.html
@@ -50,6 +50,11 @@
   <main>
     {%- block content -%}{%- endblock -%}
   </main>
+  <div class="ui container">
+    <div class="ui bottom secondary segment">
+      <p>Url retour: [{{back}}]</p>
+    </div>
+  </div>
   {%- block forms -%}{%- endblock -%}
   <input type="hidden" id="sid" />
   <!-- JAVASCRIPTS  -->
