--- a/templates/tpl_portail.html
+++ b/templates/tpl_portail.html
@@ -15,7 +15,7 @@
 
 {%- block content -%}
 <div class="ui container">
-  {% include "tpl_flash.html" %}
+  {% include "incl_flash.html" %}
   <div class="ui centered cards">
     {%- for app in applications -%}
     {%- for menu in app.menu -%}
